--- a/module_zhihu/src/main/res/layout/zhihu_recycle_list.xml
+++ b/module_zhihu/src/main/res/layout/zhihu_recycle_list.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                                      xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                      xmlns:tools="http://schemas.android.com/tools"
-                                                      android:layout_width="match_parent"
-                                                      android:layout_height="@dimen/public_height_80dp"
-                                                      android:layout_marginTop="@dimen/public_mar_top_3dp"
-                                                      android:layout_marginBottom="@dimen/public_mar_bottom_5dp"
-                                                      android:layout_marginRight="@dimen/public_mar_right_5dp"
-                                                      android:layout_marginLeft="@dimen/public_mar_left_5dp"
-                                                      app:cardBackgroundColor="@color/public_white"
-                                                      app:cardCornerRadius="2dp"
-                                                      app:cardElevation="2dp"
-                                                      app:contentPadding="8dp"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                   xmlns:tools="http://schemas.android.com/tools"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="@dimen/public_height_80dp"
+                                   android:layout_marginTop="@dimen/public_mar_top_3dp"
+                                   android:layout_marginBottom="@dimen/public_mar_bottom_5dp"
+                                   android:layout_marginRight="@dimen/public_mar_right_5dp"
+                                   android:layout_marginLeft="@dimen/public_mar_left_5dp"
+                                   app:cardBackgroundColor="@color/public_white"
+                                   app:cardCornerRadius="2dp"
+                                   app:cardElevation="2dp"
+                                   app:contentPadding="8dp"
     >
 
     <LinearLayout
@@ -37,4 +37,4 @@
             android:textSize="@dimen/public_font_18sp"
             tools:text="ss"/>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
