--- a/module_launcher/src/main/res/layout/launcher_main.xml
+++ b/module_launcher/src/main/res/layout/launcher_main.xml
@@ -5,15 +5,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="15dp"
     tools:context=".mvp.view.MainActivity">
 
     <TextView
+        android:id="@+id/launcher_tv_local"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="中国"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/launcher_tv_local_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="23:07"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/launcher_tv_local"/>
+
+    <TextView
+        android:id="@+id/launcher_tv_local_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="07-17 北京"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/launcher_tv_local_time"/>
+
+    <TextView
+        android:id="@+id/launcher_tv_nation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="中国"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/launcher_tv_nation_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="23:07"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/launcher_tv_local"/>
+
+    <TextView
+        android:id="@+id/launcher_tv_nation_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="07-17 北京"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/launcher_tv_local_time"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/launcher_recycle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/launcher_tv_local_date">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
