--- a/module_launcher/src/main/res/layout/launcher_main.xml
+++ b/module_launcher/src/main/res/layout/launcher_main.xml
@@ -60,6 +60,7 @@
         android:id="@+id/launcher_recycle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
