--- a/module_translate/src/main/res/layout/translate_activity_detail.xml
+++ b/module_translate/src/main/res/layout/translate_activity_detail.xml
@@ -5,4 +5,11 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/detail_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <TextureView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
