--- a/module_translate/src/main/res/layout/translate_activity_detail.xml
+++ b/module_translate/src/main/res/layout/translate_activity_detail.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/black"
+    android:orientation="vertical">
 
-    <ImageView
+    <me.jessyan.armscomponent.widget.TextImageView
         android:id="@+id/detail_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <TextureView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
