zhuanghz 1、个人热点页面UI搭建

--- a/module_hotspot/src/main/res/layout/activity_hotspot.xml
+++ b/module_hotspot/src/main/res/layout/activity_hotspot.xml
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/public_dp15"
-        android:text="热点名称"
+        android:text="@string/hotspot_name"
         android:textColor="@color/black"
         android:textSize="@dimen/public_sp18"
         app:layout_constraintStart_toStartOf="@id/hotspot_item_hotspot_tv_label"
@@ -121,7 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/public_dp15"
-        android:text="密码"
+        android:text="@string/hotspot_pwd"
         android:textColor="@color/black"
         android:textSize="@dimen/public_sp18"
         app:layout_constraintStart_toStartOf="@id/hotspot_item_hotspot_tv_label"
@@ -162,7 +162,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/public_dp15"
-        android:text="现在可被发现名为热点1234567的共享网络"
+        android:text="@string/hotspot_info"
         android:textColor="@color/black"
         android:textSize="@dimen/public_sp15"
         app:layout_constraintEnd_toEndOf="@+id/hotspot_item_hotspot_sw"
