--- a/module_hotspot/src/main/res/layout/activity_hotspot.xml
+++ b/module_hotspot/src/main/res/layout/activity_hotspot.xml
@@ -57,6 +57,7 @@
         app:kswBackColor="@drawable/switch_button_back_color"
         app:kswFadeBack="true"
         app:kswThumbColor="@color/white"
+        app:kswThumbRangeRatio="2"
         app:layout_constraintBottom_toBottomOf="@id/hotspot_item_hotspot_tv_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/hotspot_item_hotspot_tv_label"
@@ -89,12 +90,15 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/hotspot_item_name_tv_info"
+        android:layout_width="@dimen/public_dp180"
         android:layout_height="wrap_content"
         android:drawableRight="@mipmap/hotspot_icon_more"
         android:ellipsize="end"
+        android:gravity="right"
         android:maxWidth="@dimen/public_dp150"
         android:maxLines="1"
+        android:onClick="onClick"
         android:singleLine="true"
         android:text="热点1234567"
         android:textSize="@dimen/public_sp18"
@@ -131,14 +135,17 @@
 
     <TextView
         android:id="@+id/hotspot_item_pwd_tv_info"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/public_dp180"
         android:layout_height="wrap_content"
         android:drawableRight="@mipmap/hotspot_icon_more"
         android:ellipsize="end"
+        android:gravity="right"
         android:maxWidth="@dimen/public_dp150"
         android:maxLines="1"
+        android:onClick="onClick"
         android:singleLine="true"
         android:text="********"
+        android:inputType="textWebPassword"
         android:textSize="@dimen/public_sp18"
         app:layout_constraintBottom_toBottomOf="@+id/hotspot_item_pwd_tv_label"
         app:layout_constraintEnd_toEndOf="@+id/hotspot_item_hotspot_sw"
