--- a/module_launcher/src/main/res/layout/launcher_main.xml
+++ b/module_launcher/src/main/res/layout/launcher_main.xml
@@ -36,7 +36,7 @@
         android:id="@+id/launcher_tv_nation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="中国"
+        android:text="美国"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
