--- a/module_launcher/src/main/res/layout/launcher_activity_currency_convert.xml
+++ b/module_launcher/src/main/res/layout/launcher_activity_currency_convert.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/settings_home_toolbar"
         android:layout_width="match_parent"
@@ -18,6 +19,51 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="汇率换算"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </androidx.appcompat.widget.Toolbar>
+
+
+    <TextView
+        android:id="@+id/convert_from_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/public_dp100"
+        android:drawableRight="@drawable/arrow_down"
+        android:text="人民币"
+        android:textSize="@dimen/public_sp25"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/convert_from_et"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/public_dp10"
+        android:textSize="@dimen/public_sp25"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/convert_from_tv"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/convert_to_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/public_dp100"
+        android:drawableRight="@drawable/arrow_down"
+        android:text="美元"
+        android:textSize="@dimen/public_sp25"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/convert_from_tv" />
+
+    <TextView
+        android:id="@+id/convert_to_money_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/public_dp10"
+        android:drawableRight="@drawable/arrow_down"
+        android:textSize="@dimen/public_sp25"
+        app:layout_constraintLeft_toRightOf="@+id/convert_to_tv"
+        app:layout_constraintTop_toBottomOf="@+id/convert_from_tv" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
